--- a/backend-create/backend-create_products/package.json
+++ b/backend-create/backend-create_products/package.json
@@ -17,7 +17,7 @@
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^6.0.0-rc.6",
+    "styled-components": "^6.1.19",
     "swr": "^2.0.0"
   },
   "devDependencies": {
@@ -25,6 +25,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint-plugin-jest": "^27.2.2",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0"
